--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "ekko-lightbox": "^5.3.0",
+        "glightbox": "^3.3.0"
     }
 }
